--- a/test/StoryTestsRunner.html
+++ b/test/StoryTestsRunner.html
@@ -5,6 +5,7 @@
   <title>Jasmine Test Runner</title>
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.0.1/jasmine.css">
   <script type="text/javascript" src="../src/lib/jquery.js"></script>
+  <script type="text/javascript" src="../src/lib/proton.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.0.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.0.1/jasmine-html.js"></script>
 
